# vc-x1

./: .gitignore  .vc-config.toml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CLAUDE2.md  Cargo.toml  README.md  TODO.md  close-out.txt
notes/: README.md  bot-data-formats.md  bugs.md  cargo-locked-issue.md  chores-01.md  chores-02.md  chores-03.md  chores-04.md  chores-05.md  chores-06.md  chores-07.md  chores-08.md  chores-09.md  chores-10.md  copying.md  cycle-protocol.md  design-for-fn-symlink-cmd.md  design-for-new-and-clone-cmds.md  done.md  draft-reviews.md  fix-todo.py  forks-multi-user.md  init-clone-refactor-conflict.md  jj-revsets.md  jj-tips.md  notes-sync-20260716.md  por-dual-parity-audit.md  por-dual-parity.md  refactor-20260716.md  rust-idioms.md  substep-protocol.md  substep-style.md  todo-backlog.md  todo.md  transcript-format.md  transcript-sample.jsonl  vc-x1-init.md  versioning.md
notes/chores/: chores-03.md  chores-04.md  chores-05.md  (+9 more)
src/: args.rs  bot_session.rs  chid.rs  clone.rs  common.rs  config.rs  config_cmd.rs  config_schema.rs  context.rs  desc.rs  desc_helpers.rs  finalize.rs  fix_desc.rs  fix_ochid.rs  fix_todo.rs  init.rs  jj.rs  list.rs  logging.rs  main.rs  push.rs  repo_url.rs  repo_utils.rs  revert.rs  scope.rs  show.rs  squash_push.rs  subcommand.rs  symlink.rs  sync.rs  test_fixture.rs  test_helpers.rs  test_tmp_root.rs  todo_helpers.rs  toml_simple.rs  transcript.rs  url.rs  validate_bot.rs  validate_desc.rs  validate_todo.rs
support/: README.md  gen-exmpl-1-3.sh
tests/: cli_bot_session.rs  cli_config.rs  cli_init.rs  cli_keep.rs  cli_smoke.rs  cli_sync.rs
(+31 files in other folders)
