[package]
name = "vc-x1"
version = "0.33.0-dev1"
edition = "2024"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["now"] }
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4.6", features = ["unstable-dynamic"] }
jj-lib = "0.39.0"
log = { version = "0.4", features = ["std"] }
pollster = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
