[package]
name = "vc-x1"
version = "0.41.1-4"
edition = "2024"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["now"] }
clap = { version = "4.6", features = ["derive", "wrap_help"] }
clap_complete = { version = "4.6", features = ["unstable-dynamic"] }
jj-lib = "0.40"
log = { version = "0.4", features = ["std"] }
pollster = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
