[package]
# Temporarily "vc-x1-dev" while another bot instance depends on the
# installed stable `vc-x1` — `cargo install` then lands this dev
# binary alongside it instead of replacing it. Rename back to
# "vc-x1" when the dual-instance window closes.
name = "vc-x1-dev"
version = "0.69.0-1"
edition = "2024"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["now"] }
clap = { version = "4.6", features = ["derive", "wrap_help"] }
clap_complete = { version = "4.6", features = ["unstable-dynamic"] }
jj-lib = "0.41"
log = { version = "0.4", features = ["std"] }
pollster = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
